--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">美食紀錄</string>
     <string name="name">店名</string>
     <string name="confirm">確認</string>
+    <string name="edit">修改</string>
     <string name="google_maps_key">AIzaSyCxr2obiSF2CUfuBqHo1Mtd25dKugPmDF8</string>
 
     <string-array name="distance">
