--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="google_maps_key">AIzaSyCxr2obiSF2CUfuBqHo1Mtd25dKugPmDF8</string>
 
     <string-array name="distance">
+        <item>請選擇範圍</item>
         <item>5公里</item>
         <item>7公里</item>
         <item>11公里</item>
